cleaning up workspace for implementing new ideas