@@ -1,119 +1,30 @@
-plugins {
-    id 'java-library'
-    id 'maven-publish'
-    id 'signing'
+allprojects {
+    group = 'com.akilisha.oss'
+    version = '1.0.0-SNAPSHOT'
+
+    repositories {
+        mavenCentral()
+    }
 }
 
-group = 'com.akilisha.oss'
-version = '0.0.1'
+// Maven Publishing Configuration
+subprojects {
+    apply plugin: 'java'
+    apply plugin: 'maven-publish'
+    apply plugin: 'signing'
 
-repositories {
-    mavenLocal()
-    mavenCentral()
-}
-
-dependencies {
-    implementation "org.apache.httpcomponents.core5:httpcore5:5.3.4"
-    implementation "org.apache.httpcomponents.client5:httpclient5:5.4.4"
-
-    implementation "org.eclipse.jetty:jetty-server:11.0.25"
-    implementation "org.eclipse.jetty:jetty-servlet:11.0.25"
-    implementation "org.eclipse.jetty.http2:http2-server:11.0.25"
-    implementation "org.eclipse.jetty:jetty-alpn-java-server:11.0.25"
-    implementation "org.jboss.weld.se:weld-se-core:6.0.3.Final"
-    implementation "org.jboss.weld.servlet:weld-servlet-core:5.1.3.Final"
-
-    implementation "org.slf4j:slf4j-api:2.0.17"
-    implementation "ch.qos.logback:logback-classic:1.5.18"
-    implementation "info.picocli:picocli:4.7.7"
-
-    implementation("com.fasterxml.jackson.core:jackson-databind:2.18.1")
-    implementation "commons-cli:commons-cli:1.9.0"
-
-    // view engines
-    implementation("com.github.spullara.mustache.java:compiler:0.9.10")
-    implementation("com.github.jknack:handlebars:4.4.0")
-
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-    testImplementation("org.mockito:mockito-core:5.16.0")
-    testImplementation("org.assertj:assertj-core:3.27.3")
-}
-
-test {
-    useJUnitPlatform()
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += '--enable-preview'
-}
-
-tasks.withType(Test).configureEach {
-    jvmArgs += '--enable-preview'
-}
-
-tasks.withType(JavaExec).configureEach {
-    jvmArgs += '--enable-preview'
-}
-
-java {
-    withJavadocJar()
-    withSourcesJar()
-}
-
-artifacts {
-    archives javadocJar, sourcesJar
-}
-
-signing {
-    sign configurations.archives
-}
-
-publishing {
-    publications {
-        custom(MavenPublication) {
-            artifactId = 'roya-express'
-            from components.java
-
-            versionMapping {
-                usage('java-api') {
-                    fromResolutionOf('runtimeClasspath')
-                }
-                usage('java-runtime') {
-                    fromResolutionResult()
-                }
-            }
-            pom {
-                name = 'Roya-Express'
-                description = 'Express-ish - feels like express, moves like java'
-                url = 'https://gitlab.com/m41na/roya-express'
-                licenses {
-                    license {
-                        name = 'The Apache License, Version 2.0'
-                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                    }
-                }
-                developers {
-                    developer {
-                        id = 'jarredweb'
-                        name = 'Jarred Web'
-                        email = 'jarredweb@gmail.com'
-                    }
-                }
-                scm {
-                    connection = 'scm:git:git://gitlab.com/m41na/roya-express.git'
-                    developerConnection = 'scm:git:ssh://gitlab.com/m41na/roya-express.git'
-                    url = 'https://gitlab.com/m41na/roya-express'
-                }
-            }
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(23)
         }
     }
 
-    repositories {
-        maven {
-            def releasesRepoUrl = layout.buildDirectory.dir('repos/releases')
-            def snapshotsRepoUrl = layout.buildDirectory.dir('repos/snapshots')
-            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
-        }
+    dependencies {
+        testImplementation 'org.junit.jupiter:junit-jupiter:5.10.1'
+        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    }
+
+    tasks.named('test') {
+        useJUnitPlatform()
     }
 }
